# scanf

./: LICENSE  README.md  scanf.cabal
src/Text/Scanf/: Internal.hs
test/: example.hs
