cabal-version:       2.2
name:                scanf
version:             0.2.0.0
synopsis:            Easy and type-safe format strings for parsing and printing
description:

  A lightweight library for one-off parsing and printing.
  .
  See README.

homepage:            https://github.com/drumhacker72/scanf#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          drumhacker72@gmail.com
copyright:           2018 Li-yao Xia, 2020 J. Nelson
category:            Text
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 8.8.3

library
  hs-source-dirs:      src
  exposed-modules:
    Text.Scanf
    Text.Scanf.Internal
    Text.Scanf.TH
  build-depends:
    template-haskell,
    base >= 4.7 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite example-test
  hs-source-dirs: test
  main-is: example.hs
  build-depends:
    scanf,
    base
  ghc-options: -Wall
  default-language: Haskell2010
  type: exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/drumhacker72/scanf
